Fix issue with logo in nav-bar getting squished on smaller screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,7 +66,7 @@ header {
 
 header img {
     display: flex;
-    height: 100%;
+    max-height: 100%;
     align-items: center;
 }
 
@@ -471,7 +471,7 @@ footer>div>p {
 
     header img {
         box-sizing: border-box;
-        max-width: 80%;
+        width: auto;
         margin: 0;
     }
 
@@ -555,6 +555,10 @@ footer>div>p {
 
     header>a {
         pointer-events: none;
+    }
+
+    header img {
+        max-width: 85%;
     }
 
     #profile-image {
